--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -121,6 +121,10 @@
                 <a class="nav-link" href="{% url 'new_recipe' %}"><i
                         class="fas fa-fw fa-plus"></i> {% trans 'Create' %}</a>
             </li>
+            <li class="nav-item {% if request.resolver_match.url_name in 'list_keyword' %}active{% endif %}">
+                <a class="nav-link" href="{% url 'list_keyword' %}"><i
+                        class="fas fa-fw fa-tags"></i> {% trans 'Keyword' %}</a>
+            </li>
             {% plugin_main_nav_templates as plugin_main_nav_templates %}
             {% for pn in plugin_main_nav_templates %}
                 {% include pn %}
@@ -132,181 +136,6 @@
                 {% page_help request.resolver_match.url_name as help_button %}
                 {% if help_button %}{{ help_button|safe }}{% endif %}
 
-                <li class="nav-item dropdown {% if request.resolver_match.url_name in 'list_keyword,list_food,list_unit,view_supermarket,data_batch_edit,view_history' %}active{% endif %}">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-fw fa-toolbox fa-lg"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-center dropdown-menu-center-large">
-                        <div class="row m-0 mt-1 mt-md-0">
-                            <div class="col-4">
-                                <a href="{% url 'list_keyword' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-tags fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Keyword' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'list_food' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-leaf fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Foods' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'list_unit' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-balance-scale fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Units' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row m-0 mt-1 mt-md-0">
-                            <div class="col-4">
-                                <a href="{% url 'list_supermarket' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-store-alt fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Supermarket' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'list_supermarket_category' %}" class="p-0 p-md-1">
-                                    <div class="card  p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-cubes fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Supermarket Category' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'list_automation' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-robot fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Automations' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row m-0 mt-1 mt-md-0">
-                            <div class="col-4">
-                                <a href="{% url 'list_user_file' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-file fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Files' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'data_batch_edit' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-edit fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Batch Edit' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'view_history' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-history fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'History' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row m-0 mt-1 mt-md-0">
-                            <div class="col-4">
-                                <a href="{% url 'view_ingredient_editor' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-th-list fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Ingredient Editor' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'view_export' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-file-export fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Export' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'list_property_type' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-database fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Properties' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row m-0 mt-1 mt-md-0">
-                            <div class="col-4">
-                                <a href="{% url 'list_unit_conversion' %}" class="p-0 p-md-1">
-                                    <div class="card p-1 pt-2 no-gutters border-0">
-                                        <div class="card-body text-center p-0 no-gutters">
-                                            <i class="fas fa-exchange-alt fa-2x"></i>
-                                        </div>
-                                        <div class="card-body text-break text-center p-0 no-gutters text-muted menu-dropdown-text">
-                                            {% trans 'Unit Conversions' %}
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                </li>
                 <li class="nav-item dropdown {% if request.resolver_match.url_name in 'view_space,view_settings,view_history,view_system,docs_markdown' %}active{% endif %}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false"><i
